# PubMedFetcher

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  batch_run.py  clock.py  clock_github.py  fetch_abstract.py  keywords.txt  model_openai.pkl  pyproject.toml  requirements.txt  run.py  setup_regression_model.py
.github/workflows/: submit_batch_jobs.yml  submit_jobs.yml  test_job_submission.yml  weekly_gpt4o_mini.yml
tests/: test_run.py
